# cpn

./: .gitmodules  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: auto-sync.yml  pre-commit.yml
